# RaffoSynth-XT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
plugin/: DistrhoPluginInfo.h  dsp_functions.hpp  equalizer_v2.c  params.cpp  params.hpp  raffo.cpp  raffo.hpp  raffo_plugin.cpp  raffo_plugin.hpp
